[project]
name = "bourne"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rodrigo Tavares Miron", email = "rodrigo.miron47@gmail.com"},
]
dependencies = ["fastapi>=0.115.11", "uvicorn[standard]>=0.34.0", "scylla-driver>=3.29.3", "confluent-kafka>=2.8.2", "pydantic>=2.10.6", "python-dotenv>=1.0.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
scylla = [
    "scylla-driver>=3.28",
    "cassandra-migrate>=0.3.2",
]
kafka = [
    "confluent-kafka>=2.8.2",
    "faust-streaming>=0.11.3",
]
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.15.0",
    "httpx>=0.28.1",
    "pytest-asyncio==0.23.6",
    "black>=25.1.0",
    "ruff>=0.11.0",
    "types-python-dateutil>=2.9.0.20241206",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "function"
[tool.pdm]
distribution = false

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pypackages__
)/
'''
